avoid wrapping in area and date fields on results page

--- a/www/style/g4-screen.css
+++ b/www/style/g4-screen.css
@@ -94,6 +94,9 @@ input, textarea, select {
 	font-size: 120%;
 }
 
+.noWrap { 
+  white-space: nowrap;
+}
 
 /* ##### Header ##### */
 
